<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="photo_title">Reinforcement photo</string>
    <string name="photo_saving">Saving photo…</string>
    <string name="make_a_photo">Make photo</string>
    <string name="from_gallery">From gallery</string>
    <string name="photo_source_unavailable">Could not open camera or photo picker. Try another source.</string>
    <string name="close_photo_dialog">Close photo selection</string>
</resources>
